--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,47 @@
-<p>footer works!</p>
+<footer class="rodape">
+  <h2 class="rodape__titulo">Cadastra livros</h2>
+  <ul class="lista-rodape">
+      <li class="lista-rodape__titulo">Linkedin</li>
+      <li class="lista-rodape__item">
+          <img src="" alt="Logo do linkedin">
+          <a href="https://www.linkedin.com/in/andrealcasantos/" class="lista-rodape__link">andrealcasantos</a>
+      </li>
+      <li class="lista-rodape__item">
+          <img src="" alt="">
+          <a href="" class="lista-rodape__link"></a>
+      </li>
+  </ul>
+
+  <!-- <ul class="lista-rodape">
+      <li class="lista-rodape__titulo"></li>
+      <li class="lista-rodape__item">
+          <img src="" alt="">
+          <a href="" class="lista-rodape__link"></a>
+      </li>
+      <li class="lista-rodape__item">
+          <img src="" alt="">
+          <a href="" class="lista-rodape__link"></a>
+      </li>
+      <li class="lista-rodape__item">
+          <img src="" alt="">
+          <a href="" class="lista-rodape__link"></a>
+      </li>
+      <li class="lista-rodape__item">
+          <img src="" alt="">
+          <a href="" class="lista-rodape__link"></a>
+      </li>
+      <li class="lista-rodape__item">
+          <img src="" alt="">
+          <a href="" class="lista-rodape__link"></a>
+      </li>
+      <li class="lista-rodape__item">
+          <img src="" alt="">
+          <a href="" class="lista-rodape__link"></a>
+      </li>
+      <li class="lista-rodape__item">
+          <img src="" alt="">
+          <a href="" class="lista-rodape__link"></a>
+      </li>
+  </ul> -->
+
+</footer>
