--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,48 @@
-<p>header works!</p>
+<header class="cabecalho">
+  <div class="container">
+      <input type="checkbox" id="menu" class="container__botao">
+      <label for="menu" class="container__rotulo">
+          <span class="cabecalho__menu-hamburguer container__imagem"></span>
+      </label>
+      <ul class="lista-menu">
+          <li class="lista-menu__titulo">Categorias</li>
+          <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Programacão</a>
+          </li>
+          <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Front-end</a>
+          </li>
+          <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Infraestrutura</a>
+          </li>
+          <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Business</a>
+          </li>
+          <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Design & UX</a>
+          </li>
+      </ul>
+      <img src="/assets/img/Logo.svg" alt="Logo" class="container__imagem" (click)="telaCadastro()">
+      <h1 class="container__titulo"><b class="container__titulo--negrito">Cadastra</b>Livros</h1>
+  </div>
+
+  <ul class="opcoes">
+      <input type="checkbox" id="opcoes-menu" class="opcoes__botão">
+      <li class="opcoes__item"><a href="#" class="opcoes__link">Categorias</a></li>
+      <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+      <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+  </ul>
+
+  <div class="container">
+      <a href="#"><img src="/assets/img/Favoritos.svg" alt="Meus favoritos"
+              class="container__imagem container__imagem-transparente"></a>
+      <a href="#" class="container__link">
+          <img src="/assets/img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
+          <p class="container__texto">Minha sacola</p>
+      </a>
+      <a href="#" class="container__link">
+          <img src="/assets/img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+          <p class="container__texto">Meu perfil</p>
+      </a>
+  </div>
+</header>
