--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -5,9 +5,11 @@
     <h3 class="principal__subtitulo">Dados pessoais</h3>
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="nome">Nome Completo</label>
-      <input name="nome" id="nome" class="campo__escrita" ngModel required minlength="2" />
-
-
+      <input name="nome" id="nome" class="campo__escrita" ngModel required minlength="3" />
+        <div *ngIf="(form.controls['nome']?.invalid && form.controls['nome']?.touched) || form.controls['nome']?.dirty">
+          <span class="erro__texto" *ngIf="form.controls['nome']?.errors?.['required']">Nome deve ser preenchido!</span>
+          <span class="erro__texto" *ngIf="form.controls['nome']?.errors?.['minlength']">O nome deve ter no mínimo 3 letras</span>
+        </div>
     </div>
     <div class="formulario__dupla">
       <div class="formulario__campo">
