--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -3,38 +3,68 @@
 
   <form class="principal__formulario" id="formulario" #form="ngForm" (ngSubmit)="cadastrar(form)">
     <h3 class="principal__subtitulo">Dados pessoais</h3>
+    <!-- NOME -->
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="nome">Nome Completo</label>
-      <input name="nome" id="nome" class="campo__escrita" ngModel required minlength="3" />
-        <div *ngIf="(form.controls['nome']?.invalid && form.controls['nome']?.touched) || form.controls['nome']?.dirty">
-          <span class="erro__texto" *ngIf="form.controls['nome']?.errors?.['required']">Nome deve ser preenchido!</span>
-          <span class="erro__texto" *ngIf="form.controls['nome']?.errors?.['minlength']">O nome deve ter no mínimo 3 letras</span>
+      <input
+        name="nome"
+        id="nome"
+        class="campo__escrita"
+        ngModel required minlength="3"
+        #nome="ngModel"
+      />
+        <div *ngIf="(nome?.invalid && nome?.touched) || nome?.dirty">
+          <app-mensagem *ngIf="nome?.errors?.['required']" mensagem="Nome deve ser preenchido!"></app-mensagem>
+          <app-mensagem *ngIf="nome?.errors?.['minlength']" mensagem="O nome deve ter no mínimo 3 letras"></app-mensagem>
         </div>
     </div>
+    <!-- DATA DE NASCIMENTO -->
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="nascimento">Nascimento</label>
-        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" />
+        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel/>
       </div>
+      <!-- DADOS DE CONTATO -->
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="telefone">Contato</label>
-        <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita" />
+        <input
+          name="telefone"
+          id="telefone"
+          type="tel"
+          placeholder="(XX) XXXXX-XXXX"
+          class="campo__escrita"
+          ngModel required pattern="(\(?\d{2}\)?\s?)(\d{5}\-?\d{4})"
+          #telefone="ngModel"
+        />
+        <div *ngIf="(telefone?.invalid && telefone?.touched) || telefone?.dirty">
+          <app-mensagem *ngIf="telefone?.errors?.['required']" mensagem="telefone deve ser preenchido!"></app-mensagem>
+          <app-mensagem *ngIf="telefone?.errors?.['pattern']" mensagem="O telefone deve ter no padrão: 12 34567-8901"></app-mensagem>
+        </div>
       </div>
     </div>
+    <!-- E-MAIL -->
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="email">E-mail</label>
-      <input name="email" id="email" type="email" class="campo__escrita" />
+      <input
+        name="email"
+        id="email"
+        type="email"
+        class="campo__escrita"
+        ngModel required pattern="^[\w-.]+@([\w-]+\.)+[\w-]{2,4}$"
+        #email="ngModel"
+      />
+      <div *ngIf="(email?.invalid && email?.touched) || email?.dirty">
+        <app-mensagem *ngIf="email?.errors?.['required']" mensagem="Este dado é obrigatório!"></app-mensagem>
+        <app-mensagem *ngIf="email?.errors?.['pattern']" mensagem="E-mail deve ter o padrão: exemplo@dominio.com"></app-mensagem>
+      </div>
     </div>
-
-
     <h3 class="principal__subtitulo">Endereço</h3>
-
+    <!-- ENDERECO -->
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="cep">CEP</label>
       <input name="cep" id="cep" class="campo__escrita" />
       <div id="erro"></div>
     </div>
-
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="endereco">Endereço</label>
       <input name="endereco" id="endereco" class="campo__escrita" />
