--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -6,103 +6,101 @@
     <!-- NOME -->
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="nome">Nome Completo</label>
-      <input
-        name="nome"
-        id="nome"
-        class="campo__escrita"
-        ngModel required minlength="3"
-        #nome="ngModel"
-      />
-        <div *ngIf="(nome?.invalid && nome?.touched) || nome?.dirty">
-          <app-mensagem *ngIf="nome?.errors?.['required']" mensagem="Nome deve ser preenchido!"></app-mensagem>
-          <app-mensagem *ngIf="nome?.errors?.['minlength']" mensagem="O nome deve ter no mínimo 3 letras"></app-mensagem>
-        </div>
+      <input name="nome" id="nome" class="campo__escrita" ngModel required minlength="3" #nome="ngModel" />
+      <div *ngIf="(nome?.invalid && nome?.touched) || nome?.dirty">
+        <app-mensagem *ngIf="nome?.errors?.['required']" mensagem="Nome deve ser preenchido!"></app-mensagem>
+        <app-mensagem *ngIf="nome?.errors?.['minlength']" mensagem="O nome deve ter no mínimo 3 letras"></app-mensagem>
+      </div>
     </div>
     <!-- DATA DE NASCIMENTO -->
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="nascimento">Nascimento</label>
-        <input
-          name="nascimento"
-          id="nascimento"
-          type="date"
-          class="campo__escrita"
-          ngModel required maiorIdadeValidator
-          #nascimento="ngModel"
-        />
+        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel required maiorIdadeValidator
+          #nascimento="ngModel" />
         <div *ngIf="(nascimento?.invalid && nascimento?.touched) || nascimento?.dirty">
-          <app-mensagem *ngIf="nascimento?.errors?.['required']" mensagem="A data de nascimento deve ser preenchida!"></app-mensagem>
-          <app-mensagem *ngIf="nascimento?.errors?.['maiorIdadeValidator']" mensagem="O usuário deve ser mais de 18 anos"></app-mensagem>
+          <app-mensagem *ngIf="nascimento?.errors?.['required']"
+            mensagem="A data de nascimento deve ser preenchida!"></app-mensagem>
+          <app-mensagem *ngIf="nascimento?.errors?.['maiorIdadeValidator']"
+            mensagem="O usuário deve ser mais de 18 anos"></app-mensagem>
         </div>
       </div>
       <!-- DADOS DE CONTATO -->
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="telefone">Contato</label>
-        <input
-          name="telefone"
-          id="telefone"
-          type="tel"
-          placeholder="(XX) XXXXX-XXXX"
-          class="campo__escrita"
-          ngModel required pattern="(\(?\d{2}\)?\s?)(\d{5}\-?\d{4})"
-          #telefone="ngModel"
-        />
+        <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita" ngModel
+          required pattern="(\(?\d{2}\)?\s?)(\d{5}\-?\d{4})" #telefone="ngModel" />
         <div *ngIf="(telefone?.invalid && telefone?.touched) || telefone?.dirty">
           <app-mensagem *ngIf="telefone?.errors?.['required']" mensagem="telefone deve ser preenchido!"></app-mensagem>
-          <app-mensagem *ngIf="telefone?.errors?.['pattern']" mensagem="O telefone deve ter no padrão: 12 34567-8901"></app-mensagem>
+          <app-mensagem *ngIf="telefone?.errors?.['pattern']"
+            mensagem="O telefone deve ter no padrão: 12 34567-8901"></app-mensagem>
         </div>
       </div>
     </div>
     <!-- E-MAIL -->
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="email">E-mail</label>
-      <input
-        name="email"
-        id="email"
-        type="email"
-        class="campo__escrita"
-        ngModel required pattern="^[\w-.]+@([\w-]+\.)+[\w-]{2,4}$"
-        #email="ngModel"
-      />
+      <input name="email" id="email" type="email" class="campo__escrita" ngModel required
+        pattern="^[\w-.]+@([\w-]+\.)+[\w-]{2,4}$" #email="ngModel" />
       <div *ngIf="(email?.invalid && email?.touched) || email?.dirty">
         <app-mensagem *ngIf="email?.errors?.['required']" mensagem="Este dado é obrigatório!"></app-mensagem>
-        <app-mensagem *ngIf="email?.errors?.['pattern']" mensagem="E-mail deve ter o padrão: exemplo@dominio.com"></app-mensagem>
+        <app-mensagem *ngIf="email?.errors?.['pattern']"
+          mensagem="E-mail deve ter o padrão: exemplo@dominio.com"></app-mensagem>
       </div>
     </div>
     <h3 class="principal__subtitulo">Endereço</h3>
     <!-- ENDERECO -->
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="cep">CEP</label>
-      <input name="cep" id="cep" class="campo__escrita" />
+      <input name="cep" id="cep" class="campo__escrita" ngModel required #cep="ngModel" pattern="^(\d{5})(-?\d{3})$"
+        minlength="8" maxlength="9" (blur)="consultaCEP($event, form)" cepValidator />
+      <div *ngIf="(cep?.invalid && cep?.touched) || cep?.dirty">
+        <app-mensagem *ngIf="cep?.errors?.['required']" mensagem="O campo CEP é obrigatório"></app-mensagem>
+        <app-mensagem *ngIf="cep?.errors?.['pattern']"
+          mensagem="O campo CEP deve seguir este exemplo: 00000-000"></app-mensagem>
+        <app-mensagem *ngIf="cep?.errors?.['cepValidator']" mensagem="O CEP informado não existe!"></app-mensagem>
+      </div>
       <div id="erro"></div>
     </div>
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="endereco">Endereço</label>
-      <input name="endereco" id="endereco" class="campo__escrita" />
+      <input name="endereco" id="endereco" class="campo__escrita" ngModel required #endereco="ngModel" />
+      <div *ngIf="(endereco?.invalid && endereco?.touched) || endereco?.dirty">
+        <app-mensagem *ngIf="endereco?.errors?.['required']" mensagem="O campo endereco é obrigatório"></app-mensagem>
+      </div>
     </div>
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="numero">Numero</label>
-        <input name="numero" id="numero" class="campo__escrita" />
+        <input name="numero" id="numero" class="campo__escrita" ngModel required #numero="ngModel" />
+        <div *ngIf="(numero?.invalid && numero?.touched) || numero?.dirty">
+          <app-mensagem *ngIf="numero?.errors?.['required']" mensagem="O campo numero é obrigatório"></app-mensagem>
+        </div>
       </div>
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="complemento">Complemento</label>
-        <input name="complemento" id="complemento" class="campo__escrita" />
+        <input name="complemento" id="complemento" class="campo__escrita" placeholder="Caso tenha complemento" />
       </div>
     </div>
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="bairro">Bairro</label>
-      <input name="bairro" id="bairro" class="campo__escrita" />
+      <input name="bairro" id="bairro" class="campo__escrita" ngModel required #bairro="ngModel" />
+      <div *ngIf="(bairro?.invalid && bairro?.touched) || bairro?.dirty">
+        <app-mensagem *ngIf="bairro?.errors?.['required']" mensagem="O campo bairro é obrigatório"></app-mensagem>
+      </div>
     </div>
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="cidade">Cidade</label>
-        <input name="cidade" id="cidade" class="campo__escrita" />
+        <input name="cidade" id="cidade" class="campo__escrita" ngModel required #cidade="ngModel" />
+        <div *ngIf="(cidade?.invalid && cidade?.touched) || cidade?.dirty">
+          <app-mensagem *ngIf="cidade?.errors?.['required']" mensagem="O campo cidade é obrigatório"></app-mensagem>
+        </div>
       </div>
 
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="estado">UF</label>
-        <select id="estado" name="estado" class="campo__escrita">
+        <select id="estado" name="estado" class="campo__escrita" ngModel required #uf="ngModel">
           <option value="AC">Acre</option>
           <option value="AL">Alagoas</option>
           <option value="AP">Amapá</option>
@@ -132,6 +130,9 @@
           <option value="TO">Tocantins</option>
           <option value="EX">Estrangeiro</option>
         </select>
+        <div *ngIf="(uf?.invalid && uf?.touched) || uf?.dirty">
+          <app-mensagem *ngIf="uf?.errors?.['required']" mensagem="O campo UF é obrigatório"></app-mensagem>
+        </div>
       </div>
 
     </div>
